# taller-sesion-02

./: README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: auth.py  main.py
frontend/: index.html
frontend/src/: App.jsx  auth.js  index.css
frontend/src/pages/: LoginPage.css  LoginPage.jsx  WelcomePage.css  WelcomePage.jsx
