[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI JWT authentication service"
authors = ["Admin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
bcrypt = "^4.0"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
